# port-switch

./: Cargo.toml  README.md
crates/dynamic_tcp_proxy/: Cargo.toml  README.md
crates/dynamic_tcp_proxy/src/: config.rs  lib.rs  proxy_handler.rs
crates/port_switch/: Cargo.toml
crates/port_switch/src/: lib.rs  main.rs
crates/port_switch/src/app/: create.rs  list.rs  mod.rs
crates/port_switch/src/widgets/: mod.rs  toggle.rs
src/: lib.rs  main.rs
src/app/: list.rs  mod.rs
src/dynamic_proxy/: config.rs  mod.rs  proxy_handler.rs
src/proxy_backend/: mod.rs
