[package]
name = "port_switch"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", features = ["persistence"]}
egui = { version = "0.28.1", default-features = false}
lazy_static = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = {version = "1.39.2", features = ["full"] }


[profile.release]
lto = true
opt-level = 2
panic = "abort"
